--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start_test": "HTTPS=true HOST=0.0.0.0 PORT=80 allowedHosts='rezervace.buk.cvut.cz,localhost' react-scripts start",
-    "start_server": "cross-env HTTPS=true HOST=0.0.0.0 PORT=80 allowedHosts=\"rezervace.buk.cvut.cz,localhost\" react-scripts start",
+    "start_test": "HTTPS=true HOST=0.0.0.0 PORT=80 allowedHosts='reservation.buk.cvut.cz,localhost' react-scripts start",
+    "start_server": "cross-env HTTPS=true HOST=0.0.0.0 PORT=80 allowedHosts=\"reservation.buk.cvut.cz,localhost\" react-scripts start",
     "start_local": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
