--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "untitled",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {    "@fullcalendar/bootstrap5": "^6.1.14",
+  "dependencies": {
+    "@fullcalendar/bootstrap5": "^6.1.14",
     "@fullcalendar/core": "^6.1.14",
     "@fullcalendar/daygrid": "^6.1.14",
     "@fullcalendar/google-calendar": "^6.1.14",
@@ -16,6 +17,7 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "lucide-react": "^0.436.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
