--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,11 @@
 server {
-    listen 80;
+  listen 80;
 
-    server_name https://reservation.buk.cvut.cz  www.reservation.buk.cvut.cz;
+  location / {
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html =404;
+  }
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
-
-    location /api/ {
-        proxy_pass http://reservation.buk.cvut.cz:8000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+  include /etc/nginx/extra-conf.d/*.conf;
 }
