--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullcalendar/list": "^6.1.14",
     "@fullcalendar/react": "^6.1.14",
     "@fullcalendar/timegrid": "^6.1.14",
+    "@tanstack/react-query": "^5.56.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,7 +24,8 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.94.0"
   },
   "scripts": {
     "start_test": "HTTPS=true HOST=0.0.0.0 PORT=80 allowedHosts='reservation.buk.cvut.cz,localhost' react-scripts start",
@@ -55,7 +57,9 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
     "cross-env": "^7.0.3",
+    "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.41",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.10"
   }
 }
