--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "keycloak-js": "^26.2.0",
     "lucide-react": "^0.436.0",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
