--- a/.github/workflows/build-push-image-dev.yml
+++ b/.github/workflows/build-push-image-dev.yml
@@ -2,11 +2,11 @@ name: Docker Build and Push
 
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - updates
 
 jobs:
-  build-and-push-image:
+  build-and-push-image-dev:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -22,13 +22,12 @@ jobs:
 
       - name: Set image tags
         run: |
-          TAG_NAME=${GITHUB_REF#refs/tags/}
           echo "IMAGE_NAME=${{ secrets.DOCKER_HUB_USER }}/reservium-ui" >> $GITHUB_ENV
-          echo "VERSION_LATEST=latest" >> $GITHUB_ENV
-          echo "VERSION_TAG=$TAG_NAME" >> $GITHUB_ENV
+          echo "VERSION=$(echo $GITHUB_SHA | cut -c1-8)" >> $GITHUB_ENV
+          echo "VERSION_TAG=latest-dev" >> $GITHUB_ENV
 
       - name: Build and push Docker image
         run: |
-          docker build -t $IMAGE_NAME:$VERSION -t $IMAGE_NAME:$VERSION_TAG -t $IMAGE_NAME:$GIT_TAG .
+          docker build -t $IMAGE_NAME:$VERSION -t $IMAGE_NAME:$VERSION_TAG .
           docker push $IMAGE_NAME:$VERSION
           docker push $IMAGE_NAME:$VERSION_TAG
