--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -29,6 +29,7 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t $IMAGE_NAME:$VERSION -t $IMAGE_NAME:$VERSION_TAG -t $IMAGE_NAME:$GIT_TAG .
-          docker push $IMAGE_NAME:$VERSION
-          docker push $IMAGE_NAME:$VERSION_TAG
+          docker build \
+            --build-arg VITE_GOOGLE_CALENDAR_API_KEY=${{ secrets.VITE_GOOGLE_CALENDAR_API_KEY }} \
+            -t $IMAGE_NAME:$VERSION \
+            -t $IMAGE_NAME:$VERSION_TAG .
