--- a/.github/workflows/build-push-image-dev.yml
+++ b/.github/workflows/build-push-image-dev.yml
@@ -32,3 +32,5 @@ jobs:
             --build-arg VITE_GOOGLE_CALENDAR_API_KEY=${{ secrets.VITE_GOOGLE_CALENDAR_API_KEY }} \
             -t $IMAGE_NAME:$VERSION \
             -t $IMAGE_NAME:$VERSION_TAG .
+          docker push $IMAGE_NAME:$VERSION
+          docker push $IMAGE_NAME:$VERSION_TAG
