--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -31,5 +31,7 @@ jobs:
         run: |
           docker build \
             --build-arg VITE_GOOGLE_CALENDAR_API_KEY=${{ secrets.VITE_GOOGLE_CALENDAR_API_KEY }} \
-            -t $IMAGE_NAME:$VERSION \
+            -t $IMAGE_NAME:$VERSION_LATEST \
             -t $IMAGE_NAME:$VERSION_TAG .
+          docker push $IMAGE_NAME:$VERSION_LATEST
+          docker push $IMAGE_NAME:$VERSION_TAG
