--- a/.github/workflows/semver-tag.yml
+++ b/.github/workflows/semver-tag.yml
@@ -45,7 +45,8 @@ jobs:
             echo "Bump type: $BUMP"
 
             # Split current version
-            IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG"
+            LATEST_TAG_CLEAN=${LATEST_TAG#v}
+            IFS='.' read -r MAJOR MINOR PATCH <<< "$LATEST_TAG_CLEAN"
 
             case $BUMP in
               major) MAJOR=$((MAJOR+1)); MINOR=0; PATCH=0 ;;
