--- a/.github/workflows/semver-tag.yml
+++ b/.github/workflows/semver-tag.yml
@@ -11,6 +11,8 @@ permissions:
 jobs:
   semver:
     runs-on: ubuntu-latest
+    outputs:
+      NEW_VERSION: ${{ steps.tag.outputs.NEW_VERSION }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
@@ -62,6 +64,7 @@ jobs:
 
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
           echo "New version: $NEW_VERSION"
+          echo "::set-output name=NEW_VERSION::$NEW_VERSION"
 
       - name: Create Git tag
         env:
