--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           echo "IMAGE_NAME=${{ secrets.DOCKER_HUB_USER }}/reservium-ui" >> $GITHUB_ENV
           echo "VERSION_LATEST=latest" >> $GITHUB_ENV
-          VERSION_TAG=${{ github.event.workflow_run.outputs.NEW_VERSION }}
+          echo "VERSION_TAG=${{ github.event.workflow_run.outputs.NEW_VERSION }}" >> $GITHUB_ENV
 
       - name: Build and push Docker image
         run: |
