--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -23,9 +25,11 @@ jobs:
 
       - name: Set image tags
         run: |
+          LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+
           echo "IMAGE_NAME=${{ secrets.DOCKER_HUB_USER }}/reservium-ui" >> $GITHUB_ENV
           echo "VERSION_LATEST=latest" >> $GITHUB_ENV
-          echo "VERSION_TAG=v2.0.0" >> $GITHUB_ENV
+          echo "VERSION_TAG=$LATEST_TAG" >> $GITHUB_ENV
 
       - name: Build and push Docker image
         run: |
