--- a/.github/workflows/build-push-image-dev.yml
+++ b/.github/workflows/build-push-image-dev.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           docker build \
             --build-arg VITE_GOOGLE_CALENDAR_API_KEY=${{ secrets.VITE_GOOGLE_CALENDAR_API_KEY_DEV }} \
-            --build-arg VITE_API_BASE_URL=${{ env.VITE_API_BASE_URL_DEV }} \
+            --build-arg VITE_API_BASE_URL=${{ vars.VITE_API_BASE_URL_DEV }} \
             -t $IMAGE_NAME:$VERSION_TAG .
           docker push $IMAGE_NAME:$VERSION_TAG
