ci(release-please): add job for autogenarate release notes and tags

--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -1,14 +1,16 @@
 name: Docker Build and Push
 
 on:
-  workflow_run:
-    workflows: ["SemVer Tag"]
+  pull_request:
+    branches:
+      - main
     types:
-      - completed
+      - closed
 
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true && github.event.pull_request.head.ref == 'release-please--branches--main'
     steps:
       - uses: actions/checkout@v5
         with:
